# modern_bert_rag

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  mypy.ini  pyproject.toml
notebooks/: benchmark.ipynb  debug.ipynb
scripts/: filter_corpus.py
src/: __main__.py  model.py
src/backend/: __init__.py
src/backend/api/: main.py
src/backend/corpus/: corpus.py
src/backend/models/: __init__.py  benchmark.py  encoder.py  llm.py  rag.py  retriever.py
src/frontend/: my_cl_app.py
