[tool.poetry]
name = "modern-bert-rag"
version = "0.1.0"
description = ""
authors = ["Thomas Lespargot <thomas.lespargot@gmail.com>"]
license = "Apache"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
black = "^24.10.0"
pre-commit = "^4.1.0"
transformers = ">=4.48.0"
torch = "^2.5.1"
fastapi = {extras = ["standard"], version = "^0.115.7"}
flake8 = "^7.1.1"
sentence-transformers = "^3.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
